Update names, data and paths, correct typos.

--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -228,12 +228,12 @@ gbs$Dme_Dma <- load_genomic_breaks(system.file("extdata/Insects_pairwise_v3/Dmel
 ### _Caenorhabditis_
 
 ```{r GBreaks_object_Caeno, dependson=GBreaks_object_Droso, cache=TRUE}
-gbs$Nig_Bri <- load_genomic_breaks(system.file("extdata/Nematodes_pairwise/nigoni_briggsae.07.postmasked.gff.gz", package = "BreakpointsData"), type = "match")
-gbs$Nig_Rem <- load_genomic_breaks(system.file("extdata/Nematodes_pairwise/nigoni_remanei.07.postmasked.gff.gz", package = "BreakpointsData"), type = "match")
-gbs$Nig_Ino <- load_genomic_breaks(system.file("extdata/Nematodes_pairwise/nigoni_inopinata.07.postmasked.gff.gz", package = "BreakpointsData"), type = "match")
-gbs$Bri_Nig <- load_genomic_breaks("/bucket/LuscombeU/live/CharlesPlessy/GenomesToCompare/Caenorhabditis/briggsae_nigoni/results/last/query.07.postmasked.maf.gz", type = "match")
-gbs$Bri_Rem <- load_genomic_breaks("/bucket/LuscombeU/live/CharlesPlessy/GenomesToCompare/Caenorhabditis/briggsae_remanei/results/last/query.07.postmasked.maf.gz")
-gbs$Bri_Ele <- load_genomic_breaks("/bucket/LuscombeU/live/CharlesPlessy/GenomesToCompare/Caenorhabditis/briggsae_elegans/results/last/query.07.postmasked.maf.gz")
+gbs$Cni_Cbr <- load_genomic_breaks(system.file("extdata/Nematodes_pairwise/nigoni_briggsae.07.postmasked.gff.gz", package = "BreakpointsData"), type = "match")
+gbs$Cni_Cre <- load_genomic_breaks(system.file("extdata/Nematodes_pairwise/nigoni_remanei.07.postmasked.gff.gz", package = "BreakpointsData"), type = "match")
+gbs$Cni_Cin <- load_genomic_breaks(system.file("extdata/Nematodes_pairwise/nigoni_inopinata.07.postmasked.gff.gz", package = "BreakpointsData"), type = "match")
+gbs$Cbr_Cni <- load_genomic_breaks(system.file("extdata/Nematodes_pairwise/briggsae_nigoni.07.postmasked.gff.gz", package = "BreakpointsData"), type = "match")
+gbs$Cbr_Cre <- load_genomic_breaks(system.file("extdata/Nematodes_pairwise/briggsae_remanei.07.postmasked.gff.gz", package = "BreakpointsData"), type = "match")
+gbs$Cbr_Cel <- load_genomic_breaks(system.file("extdata/Nematodes_pairwise/briggsae_elegans.07.postmasked.gff.gz", package = "BreakpointsData"), type = "match")
 ```
 
 ### Annotate Oikopleura
